--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <h1>Pages#home</h1>
 
-<h1> This is the home page for Opt in</h1> 
+<h1> This is the home page for Opt in</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<h2>Here is a second header</h2>
